--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,18 @@ body {
     color var(--transition-base);
 }
 
+.seo-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 body::before {
   content: "";
   position: fixed;
